--- a/_includes/intro/intro.html
+++ b/_includes/intro/intro.html
@@ -8,11 +8,11 @@
 <section class="section section-dark intro">
     <div class="overlay">
         <div class="content intro-wrapper">
-            <div class="title">Engineering Your Dreams</div>
-            <div class="description">We develop web and mobile applications with the team of the best engineers equipped with
+            <div class="title transite transite-up sn-1">Engineering Your Dreams</div>
+            <div class="description transite transite-up sn-2">We develop web and mobile applications with the team of the best engineers equipped with
                 reliable tools and following modern agile methodologies
             </div>
-            <div class="button-wrapper">
+            <div class="button-wrapper transite transite-up sn-3">
                 <button class="intro-button">contact us</button>
             </div>
             <div class="arrow"></div>
