--- a/_layouts/default-static-header.html
+++ b/_layouts/default-static-header.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  {% include header/header.html %}
+  {% include header/header.html black=true %}
   {{ content }}
   {% include footer/footer.html %}
   <script src="../assets/scripts/script.js"></script>
