--- a/_includes/partnership/partnership.html
+++ b/_includes/partnership/partnership.html
@@ -6,14 +6,14 @@
 {% endcomment %}
 
 <section class="section section-dark partnership">
-    <div class="overlay">
-        <div class="content content-block">
-            <h1 class="title">Partnership is the only way to success!</h1>
-            <h2 class="description">We strive to build relationships with our clients that last for years. This makes trust, reliability and
-                respect the principle values of our culture.</h2>
-            <div class="button-wrapper">
-                <button class="partnership-button">Contact us</button>
-            </div>
-        </div>
+  <div class="overlay">
+    <div class="content content-block">
+      <h1 class="title transite transite-up sn-1">Partnership is the only way to success!</h1>
+      <h2 class="description transite transite-up sn-2">We strive to build relationships with our clients that last for years. This makes trust,
+        reliability and respect the principle values of our culture.</h2>
+      <div class="button-wrapper transite transite-up sn-3">
+        <button class="partnership-button">Contact us</button>
+      </div>
     </div>
+  </div>
 </section>
