Added head tags - og:tags, GA, fonts etc

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,7 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
+    {% include _head/head.html %}
 </head>
 <body>
 {% include header/header.html %}
