--- a/_layouts/vacancy.html
+++ b/_layouts/vacancy.html
@@ -17,30 +17,32 @@
     {% include _head/head.html %}
 </head>
 <body>
-  {% include header/header.html %}
-  <div class="post-content">
-    <h1>{{ page.title }}</h1>
-    <div class="post-metadata">
-      <span>{{ page.date | date: "%d.%m.%Y" }}</span><span>{{ page.tag }}</span>
-    </div>
-    <p>
-        {% assign author = site.authors | where: 'short_name', page.author | first %}
-        {% if author %}
-        - <a href="{{ author.url }}">{{ author.name }}</a>
-        {% endif %}
-    </p>
+  {% include header/header.html black=true %}
+  <div class="vacancy">
+    <div class="post-content">
+      <h1>{{ page.title }}</h1>
+      <div class="post-metadata">
+        <span>{{ page.date | date: "%d.%m.%Y" }}</span><span>{{ page.tag }}</span>
+      </div>
+      <p>
+          {% assign author = site.authors | where: 'short_name', page.author | first %}
+          {% if author %}
+          - <a href="{{ author.url }}">{{ author.name }}</a>
+          {% endif %}
+      </p>
 
-    {{ content }}
+      {{ content }}
 
-    {% assign filtered_posts = site.categories["Vacancy"] | where: 'tag', page.tag %}
-    {% if filtered_posts.size > 1 %}
-      <h2>See also</h2>
-    {% endif %}
-    {% for post in filtered_posts %}
-      {% if post.title != page.title %}
-        {% include vacancy-preview/vacancy-preview.html post=post %}
+      {% assign filtered_posts = site.categories["Vacancy"] | where: 'tag', page.tag %}
+      {% if filtered_posts.size > 1 %}
+        <h2>See also</h2>
       {% endif %}
-    {% endfor %}
+      {% for post in filtered_posts %}
+        {% if post.title != page.title %}
+          {% include vacancy-preview/vacancy-preview.html post=post %}
+        {% endif %}
+      {% endfor %}
+    </div>
   </div>
 </body>
 </html>
