--- a/_includes/blog/blog.scss
+++ b/_includes/blog/blog.scss
@@ -27,6 +27,7 @@
       column-gap: 40px;
       border-bottom: 1px solid rgba(0, 0, 0, .15);
       cursor: pointer;
+      max-width: 960px;
 
       @include tablet-screen {
         grid-template-columns: 100%;
