Fixed header clolr after page refresh. Applied code review suggestions

--- a/_includes/blog/blog.html
+++ b/_includes/blog/blog.html
@@ -5,7 +5,7 @@
   -->
 {% endcomment %}
 
-<section class="section blog">
+<section class="section blog" id="blog">
     {% assign prefix = site.imgPrefix %}
     {% assign content = site.data.blog %}
     <div class="content">
