--- a/_includes/blog/blog.scss
+++ b/_includes/blog/blog.scss
@@ -28,6 +28,7 @@
       border-bottom: 1px solid rgba(0, 0, 0, .15);
       cursor: pointer;
       max-width: 960px;
+      margin: 0 auto;
 
       @include tablet-screen {
         grid-template-columns: 100%;
