--- a/_includes/clients/clients.html
+++ b/_includes/clients/clients.html
@@ -25,7 +25,7 @@
         <div class="clients-block">
           <div class="title transite transite-up sn-{{ animationTextIndex }}">{{ item.title }}</div>
           <div class="description transite transite-up sn-{{ animationTextIndex }}">{{ item.description }}</div>
-          <button class="button transite transite-up sn-{{ animationIndex }}">View Case Study</button>
+          <button class="button button-outline transite transite-up sn-{{ animationIndex }}">View Case Study</button>
           <div class="image transite transite-{{imageAnimationDirection}} sn-{{ animationIndex }}">
             <img src="{{ prefix }}{{ item.image }}">
           </div>
