--- a/_includes/header/header.scss
+++ b/_includes/header/header.scss
@@ -50,7 +50,7 @@ $toggle-size: 30px;
     }
   }
 
-  .button {
+  .header-button {
     display: block;
     background-color: transparent;
     border: 1px solid white;
