--- a/_includes/post-preview/post-preview.html
+++ b/_includes/post-preview/post-preview.html
@@ -6,12 +6,10 @@
 {% endcomment %}
 
 <a href="{{ include.post.url }}" class="post-preview">
-  <div class="image-wrapper">
-    <img src="{{ include.post.image }}" />
-  </div>
+  <div class="image" style="background-image: url({{include.post.image}})"></div>
   <div>
     <div class="title">{{ include.post.title }}</div>
     <div class="description">{{ include.post.description }}</div>
-    <div class="date">{{ include.post.date }}</div>
+    <div class="date">{{ include.post.date | date: "%d-%m-%Y" }}</div>
   </div>
 </a>
