--- a/_includes/post-preview/post-preview.scss
+++ b/_includes/post-preview/post-preview.scss
@@ -6,16 +6,15 @@
   padding: 24px 0;
   text-decoration: none;
   width: 100%;
+  max-width: 960px;
 
-  .image-wrapper {
-    width: 190px;
-    height: 150px;
+  .image {
+    @include size(190px, 150px);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     margin-right: 40px;
     flex-shrink: 0;
-
-    img {
-      max-width: 100%;
-    }
   }
 
   .title {
