Added button to navigate to blog page

--- a/_includes/blog/blog.html
+++ b/_includes/blog/blog.html
@@ -10,4 +10,9 @@
   {% assign content = site.data.blog %}
 
   {% include blog-posts/blog-posts.html mainPage=true limit=3 title=content.title subtitle=content.subTitle %}
+  <div class="text-center">
+    <a href="/blog">
+    <button class="button button-outline">Read all blogs</button>
+  </a>
+  </div>
 </section>
