Added author blog in post. Fixed highlighting menu on scroll

--- a/_includes/_head/favicon.html
+++ b/_includes/_head/favicon.html
@@ -1,4 +1,4 @@
-{% assign prefix = site.imgPrefix | append: 'favicon/' %}
+{% assign prefix = site.url | append: '/' | append: site.imgPrefix %}
 <!--<link rel="shortcut icon" type="image/png" href="{{ prefix }}16x16.png" sizes="16x16">
 <link rel="shortcut icon" type="image/png" href="{{ prefix }}32x32.png" sizes="32x32">
 <link rel="shortcut icon" type="image/png" href="{{ prefix }}96x96.png" sizes="96x96">
