--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,6 @@
   {% include header/header.html %}
   {{ content }}
   {% include footer/footer.html %}
-  <script src="../assets/scripts/script.js"></script>
+  <script src="../assets/scripts/script.js?q=20220805"></script>
 </body>
 </html>
