--- a/_includes/header/header.html
+++ b/_includes/header/header.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="menu mobile-menu">
-      <div>Web & Mob Development</div>
+      <div class="title">Web & Mob Development</div>
       <input id="menu-toggle" type="checkbox" />
       <label class='menu-button-container' for="menu-toggle">
         <div class='menu-button'></div>
