--- a/_includes/intro/intro.html
+++ b/_includes/intro/intro.html
@@ -8,7 +8,7 @@
 <section class="section section-dark intro">
   <div class="overlay">
     <div class="content intro-wrapper">
-      <div class="title transite transite-up sn-1">Engineering Your Dreams</div>
+      <div class="title transite transite-up sn-1">Engineering Your <br class="break-line">Dreams</div>
       <div class="description transite transite-up sn-2">We develop web and mobile applications with the team of the
         best engineers equipped with
         reliable tools and following modern agile methodologies
