--- a/_includes/partnership/partnership.scss
+++ b/_includes/partnership/partnership.scss
@@ -14,18 +14,30 @@
       text-align: center;
 
       @include tablet-screen {
+        max-width: 600px;
+      }
+
+      @include mobile-screen {
         padding-inline: 20px;
       }
     }
 
     .title {
       @include tablet-screen {
+        @include font(44px, 600);
+      }
+
+      @include small-tablet-screen {
         @include font(30px, 600);
       }
     }
 
     .description {
       @include tablet-screen {
+        @include font(22px, 300);
+      }
+
+      @include small-tablet-screen {
         @include font(20px, 300);
       }
     }
@@ -33,9 +45,15 @@
     .button-wrapper {
       margin-top: 88px;
     }
-      
+
     .button {
+      font-family: 'Roboto', Arial, sans-serif;
+
       @include tablet-screen {
+        @include size(202px, 60px);
+      }
+
+      @include small-tablet-screen {
         width: 100%;
       }
     }
