--- a/_includes/header/header.scss
+++ b/_includes/header/header.scss
@@ -25,7 +25,7 @@ $toggle-size: 30px;
     top: 0;
     z-index: 99;
     width: 100%;
-    padding: 6px;
+    padding: 6px 20px;
   }
 
   .menu-item {
@@ -51,6 +51,7 @@ $toggle-size: 30px;
   }
 
   .header-button {
+    font-size: 14px;
     display: block;
     background-color: transparent;
     border: 1px solid white;
@@ -59,7 +60,7 @@ $toggle-size: 30px;
     text-align: center;
     line-height: 40px;
     padding: 0 30px;
-    margin: 0 14px;
+    margin: 0 14px 0 30px;
 
     &:hover {
       color: white;
@@ -156,6 +157,15 @@ $toggle-size: 30px;
 
     @include tablet-screen {
       @include flex(row, space-between, center);
+      position: sticky;
+    }
+
+    .title {
+      @include font(18px, 600);
+
+      @include small-tablet-screen {
+        font-size: 16px;
+      }
     }
 
     .button {
