--- a/_includes/how-it-works/how-it-works.scss
+++ b/_includes/how-it-works/how-it-works.scss
@@ -7,12 +7,20 @@
 
     .title {
       @include tablet-screen {
+        @include font(38px, 600);
+      }
+
+      @include small-tablet-screen {
         @include font(30px, 600);
       }
     }
 
     .description {
       @include tablet-screen {
+        @include font(22px, 300);
+      }
+
+      @include small-tablet-screen {
         @include font(20px, 300);
       }
     }
@@ -61,6 +69,10 @@
         padding-bottom: 16px;
 
         @include tablet-screen {
+          @include font(14px, 600);
+        }
+
+        @include small-tablet-screen {
           @include font(12px, 600);
         }
       }
@@ -71,6 +83,10 @@
         padding-bottom: 20px;
 
         @include tablet-screen {
+          @include font(22px, 600px);
+        }
+
+        @include small-tablet-screen {
           @include font(20px, 600);
         }
       }
@@ -81,6 +97,11 @@
         line-height: 1.55;
 
         @include tablet-screen {
+          @include font(16px, 300);
+          max-width: 576px;
+        }
+
+        @include small-tablet-screen {
           @include font(14px, 300);
           max-width: 576px;
         }
