--- a/_layouts/default-static-header.html
+++ b/_layouts/default-static-header.html
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/styles.css" />
     {% include _head/head.html %}
 </head>
 <body>
