--- a/_layouts/vacancy.html
+++ b/_layouts/vacancy.html
@@ -13,7 +13,7 @@
 <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/styles.css" />
     {% include _head/head.html %}
 </head>
 <body>
