--- a/_includes/_head/favicon.html
+++ b/_includes/_head/favicon.html
@@ -1,21 +1,9 @@
-{% assign prefix = site.url | append: '/' | append: site.imgPrefix %}
-<!--<link rel="shortcut icon" type="image/png" href="{{ prefix }}16x16.png" sizes="16x16">
-<link rel="shortcut icon" type="image/png" href="{{ prefix }}32x32.png" sizes="32x32">
-<link rel="shortcut icon" type="image/png" href="{{ prefix }}96x96.png" sizes="96x96">
-<link rel="shortcut icon" type="image/png" href="{{ prefix }}152x152.png" sizes="192x192">
-<link
-  rel="apple-touch-icon-precomposed"
-  sizes="57x57"
-  href="{{ prefix }}57x57.png"
-/>
-<link
-  rel="apple-touch-icon-precomposed"
-  sizes="120x120"
-  href="{{ prefix }}120x120.png"
-/>-->
+{% assign prefix = site.url | append: '/' | append: site.imgPrefix | append: 'favicon/' %}
+
 <link rel="shortcut icon" href="{{ prefix }}64x64.ico" sizes="64x64">
-<link
-  rel="apple-touch-icon"
-  sizes="152x152"
-  href="{{ prefix }}152x152.png"
-/>
+<link sizes="152x152" rel="apple-touch-icon" href="{{ prefix }}152x152.png"/>
+<link rel="apple-touch-icon" href="{{ prefix }}152x152.png">
+<link rel="apple-touch-icon" sizes="76x76" href="{{ prefix }}152x152.png">
+<link rel="apple-touch-icon" sizes="152x152" href="{{ prefix }}152x152.png">
+<link rel="apple-touch-startup-image" href="{{ prefix }}152x152.png">
+<meta name="msapplication-TileImage" content="{{ prefix }}400x400.png">
