--- a/_includes/contact-us/contact-us.html
+++ b/_includes/contact-us/contact-us.html
@@ -9,24 +9,25 @@
     {% assign content = site.data.contact-us %}
     <div class="content">
         <div class="text-center">
-            <h1>{{ content.title }}</h1>
-            <h2>{{ content.subTitle }}</h2>
+            <h1 class="transite transite-up sn-1">{{ content.title }}</h1>
+            <h2 class="transite transite-up sn-2">{{ content.subTitle }}</h2>
         </div>
-        <div class="form-wrapper">
+        <form class="form-wrapper">
             <label>
-                <input>
+                <input placeholder="Your name" type="text">
             </label>
             <label>
-                <input>
+                <input placeholder="Your E-mail" type="text">
             </label>
             <label>
-                <input>
+                <textarea placeholder="Your text"></textarea>
             </label>
-        </div>
-        <div class="button">
-            <button>
-                Contact Us
-            </button>
+            <div class="file-wrapper">
+                <input type="file">
+            </div>
+        </form>
+        <div class="button-wrapper transite transite-up sn-3">
+            <button class="button">Contact Us</button>
         </div>
         <div class="additional-text">{{ content.additionalText }}</div>
     </div>
